# valid

./: .gitignore  hie.yaml  shell.nix  valid.cabal
